--- a/css/styles.css
+++ b/css/styles.css
@@ -1056,144 +1056,62 @@ body {
 }
 
 .footer {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  gap: 80px;
-  position: relative;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
   background-color: #7A3145;
 }
 
-.menu-contact {
-  display: flex;
-  align-items: start;
-  gap: 40px 302px;
-  
-  justify-content: start;
-  flex-wrap: wrap;
+.footer-left {
+  max-width: 300px;
+  color: #fbfbfb;
 }
 
-.logo-text {
-  display: flex;
-  min-width: 240px;
-  flex-direction: column;
+.footer-left h1 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.footer-left p {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+
+.footer-right a {
+  display: block;
   font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  justify-content: start;
-  width: 265px;
-  gap: 14px;
-  color: rgba(251, 251, 251, 1);
+  color: #FFFFFF;
+  text-decoration: none;
+  margin: 5px 0;
+  color: #fbfbfb;
 }
 
-.img-logo {
-  aspect-ratio: 10.75;
-  object-fit: contain;
-  object-position: center;
-  width: 194px;
-  max-width: 100%;
-}
 
-.footer-menu {
-  font-family: "Inter Tight", sans-serif;
-  font-size: 28px;
-  font-weight: 600;
-}
-
-.block-footer {
-  width: 215px;
-  height: 220px;
-  gap: 40px;
-}
-
-.footer-text {
-  width: 296px;
-  height: 54px;
-  font-family: "Inter Tight", sans-serif;
-  font-weight: 500;
+.contact-info {
   font-size: 14px;
-  line-height: 1.2;
+  margin: 10px 0;
   color: #fbfbfb;
 }
 
-.nav-footer .footer-menu {
-  font-family: "Inter Tight", sans-serif;
-  font-size: 28px;
-  font-weight: 600;
-  line-height: 1.5;
-  letter-spacing: -1.5%;
-  list-style-type: none;
-  color: #fbfbfb;
-}
-
-.contacts-footer {
-  font-family: "Inter Tight", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  text-decoration: none;
-}
-
-.address,
-.phone {
-  text-decoration: none;
-  color: #fbfbfb;
-  width: 215px;
-  height: 68px;
-}
-
-.contact-items {
-  padding-bottom: 14px;
-  list-style-type: none;
-}
-
-.privacy-policy {
-  width: 335px;
-  height: 16px;
-  gap: 49px;
-  margin-top: 40px;
-}
-
-.contacts-footer a:link {
-  color: rgba(251, 251, 251, 1);
-  text-decoration: none;
-}
-
-.privacy-policy a:visited,
-a:active {
-  color: rgba(251, 251, 251, 0.5);
-  text-decoration: none;
-}
-
-.privacy-policy-2,
-.cookie-settings,
-.block-copyright {
-  align-self: stretch;
-  margin: auto 0;
-  color: rgba(251, 251, 251, 0.5);
-  text-decoration: none;
-}
-
-.block-4 {
+.footer-bottom {
   display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.privacy-policy {
-  display: flex;
-  align-items: start;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #7A3145;
   font-size: 12px;
-  color: rgba(251, 251, 251, 0.5);
-  font-weight: 500;
-  letter-spacing: -0.27px;
-  line-height: 1;
-  justify-content: start;
-  font-family: "Inter Tight", sans-serif;
+  color:  rgba(251, 251, 251, 0.5);
+  
 }
+
+.footer-bottom a {
+  color: rgba(251, 251, 251, 0.5);
+
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+
 
 
 
@@ -1202,6 +1120,7 @@ a:active {
 @media (min-width: 768px) {
   .container {
     width: 100%;
+    margin: 0 auto;
   }
 
 
@@ -1214,6 +1133,7 @@ a:active {
     align-items: center;
     position: relative;
     z-index: 10;
+    margin: 0 auto;
   }
 
   .navbar {
@@ -1241,16 +1161,23 @@ a:active {
   .organic-vegatables {
     padding: 100px 32px 100px 32px;
     gap: 50px;
+    margin: 0 auto;
   }
+
 
   .main-text {
     font-size: 64px;
     line-height: 64px;
+    margin: 0 10%;
   }
 
+
   .info-text{
+    width: 626px;
     font-size: 16px;
     line-height: 20px;
+    margin: 5% 10%;
+    
   }
 
   .products-list{
@@ -1262,32 +1189,38 @@ a:active {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    margin: 0 auto;
   }
 
   .product-card{
     width: 342px;
+    margin: 0 auto;
   }
 
   .reviews-content {
     width: 768px;
     padding: 100px 32px 100px 32px;
     gap: 10px;
+    margin: 5% 10%;
   }
 
   .reviews-title {
     width: 553px;
     font-size: 64px;
     line-height: 64px;
+    margin: 0 auto;
   }
 
   .reviews-subtitle {
     font-size: 16px;
     line-height: 20px;
+    margin: 0 auto;
   }
 
   .review-card {
     width: 343px;
     display: flex;
+    margin: 0 auto;
   }
   .review-card:nth-child(n+3) {
     display: none;
@@ -1296,6 +1229,7 @@ a:active {
   .review-text {
     font-size: 18px;
     line-height: 24px;
+    margin: 0 auto;
   }
 
   .harvest-container{
@@ -1304,42 +1238,54 @@ a:active {
     gap: 50px;
   }
 
+  .boxes-container{
+    margin: 5% 10%;
+  }
+
     .main-title {
       width: 640px;
       font-size: 64px;
       line-height: 64px;
+      margin: 5% 10%;
     }
   
     .description {
       width: 640px;
       font-size: 16px; 
       line-height: 20px;
+      margin: 5% 10%;
     }
 
     .form-container{
       width: 628px;
       padding: 50px 100px 50px 100px;
       gap: 10px;
+
     }
+  
   
     .form-input,
     .form-textarea {
       width: 428px;
+      margin: 0 auto;
     }
   
     .social-container {
       width: 628px;
       padding: 50px;
       gap: 50px;
+      margin: 0 auto;
     }
   
     .social-image img {
       width: 528px;
+      margin: 0 auto;
     }
 
     .social-text{
       font-size: 18px;
       line-height: 20px;
+      margin: 0 auto;
     }
 
     .social-links{
@@ -1347,60 +1293,76 @@ a:active {
       font-size: 32px;
       line-height: 32px;
       display: flex;
+      margin: 0 auto;
     }
 
-    .footer {
-    
-      padding: 32px;
-      gap: 100px;
+   
+  .footer {
       display: flex;
       justify-content: space-between;
-    }
+      padding: 20px;
+      background-color: #7A3145;
+      width: 100%;
+  }
   
-    .footer-text {
+  .footer-left {
+    display: flex;
+    flex-direction: column;
+      max-width: 300px;
+      color: #fbfbfb;
+      gap: 25px;
       width: 265px;
-      display: flex;
-      
-      font-size: 16px;
-      line-height: 20px;
-    }
-
-    .footer-menu{
-      display: flex;
-      flex-direction: column;
-    }
-
-    .nav-footer{
-      display: block;
-    }
-
-    .footer-menu > li{
-      font-size: 32px;
-      line-height: 32px;
-    }
+  }
   
-    .logo-text {
-      width: 400px;
-    }
-
-    .block-4{
-      width: 248px;
-      gap: 8px;
-      font-weight: 500;
+  .footer-left h1 {
       font-size: 18px;
-      line-height: 20px;
+      margin: 0;
+  }
+  
+  .footer-left p {
+      font-size: 14px;
+      margin: 10px 0;
+  }
+  
+  .footer-right {
+    display: flex;
+    flex-direction: column;
+      text-align: right;
+      color: #fbfbfb;
+      gap: 25px;
+  }
+  
+  .footer-right a {
+      display: block;
+      font-size: 16px;
+      color: #fbfbfb;
+      text-decoration: none;
+      margin: 5px 0;
+  }
+  
+  .contact-info {
+      font-size: 14px;
+      margin: 10px 0;
+  }
+  
+  .footer-bottom {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 20px;
+      background-color: #7A3145;
       color: rgba(251, 251, 251, 0.5);
+      width: 100%;
+      font-size: 12px;
+  }
+  
+  .footer-bottom a {
+    color: rgba(251, 251, 251, 0.5);
+      text-decoration: none;
+      margin-right: 10px;
+      margin-left: 10px;
+  }
+  
 
-    }
-  
-    .contact-items {
-      width: 500px;
-    }
-  
-    .privacy-policy {
-      width: 600px;
-    }
-  
   
     .organic-up-to {
       height: 469px;
@@ -1410,12 +1372,16 @@ a:active {
       width: 704px;
       font-size: 64px;
       line-height: 70px;
+      margin: 5% 10%;
     }
+
+
 
     .section-second-second-part-header{
       width: 450px;
       font-size: 32px;
       line-height: 32px;
+      margin: 0 10%;
     }
   
     .up-to {
@@ -1424,28 +1390,54 @@ a:active {
       width: 704px;
       height: 102px;
     }
-  
-    
-  
-    .section-second-first-part-img {
-      padding: 40px;
+
+
+    .first-part-img{
+      width: 640px;
+      height: 640px;
+    }
+
+    .section-second-second-part{
+      height: 699px;
+      margin: 0 auto;
     }
   
+    
+    .section-second-first-part{
+      width: 100%;
+      height: 840px;
+    }
+  
+    .section-second-first-part-img {
+      width: 640px;
+      
+      padding: 40px;
+      margin: 0 auto;
+    }
+  
+    .section-second-second-part > h1{
+      margin: 5% 10%;
+    }
   
     .section-second-second-part-text {
       width: 450px;
       font-size: 16px;
       line-height: 20px;
+      margin: 0 10%;
+    
     }
   
 
     .section-second-second-part-steps{
       width: 450px;
       gap: 20px;
+      margin: 0 auto;
+      margin-bottom: 5%;
     }
 
     .section-second-second-part-first-step{
       width: 450px;
+  
     }
 
     .section-second-second-part-first-step-p{
