--- a/css/styles.css
+++ b/css/styles.css
@@ -950,7 +950,7 @@ body {
 
 @media (min-width: 375px) {
   .container {
-    width: 375px;
+    width: 100%;
   }
 
   .header-container {
@@ -971,6 +971,8 @@ body {
   .navbar {
     display: flex;
     gap: 50px;
+    width: 100%;
+    justify-content: space-between;
   }
 
   .navbar-ul {
@@ -1054,9 +1056,91 @@ body {
   }
 
   .first-div {
-    width: 100%;
+    width: 335px;
     gap: 20px;
+    margin: 0 auto;
   }
+
+  .img-area{
+    width: 100%;
+  }
+  .first-part-img1{
+    width: 100%;
+  }
+
+  .section-second-first-part {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 530px; 
+  }
+
+  .section-second-second-part-header{
+    margin: 0 auto;
+  }
+
+  .section-second-second-part-text{
+    margin: 0 auto;
+  }
+
+  .section-second-second-part-steps{
+    margin: 0 auto;
+  }
+
+
+  .discount-info-internal{
+    margin: 0 auto;
+
+  }
+
+
+  .discount-info-text{
+    margin: 0 auto;
+  }
+
+  .main-text{
+    margin: 0 auto;
+  }
+
+  .info-text{
+    margin: 25px auto;
+  }
+
+  .products-list{
+    margin: 0 auto;
+  }
+
+
+  .reviews-content{
+    margin: 5% 10%;
+  }
+
+  .review-card{
+    margin: 0 auto;
+  }
+
+  .main-title{
+    margin: 0 auto;
+  }
+
+  .description{
+    margin: 0 auto;
+  }
+
+  .boxes-container{
+    margin: 5% 10%;
+  }
+
+
+  .reviews-title{
+    margin: 0 auto;
+  }
+  
+  .first-part-img {
+    max-width: 100%; 
+    height: 450px; 
+  }
+  
 
   .title {
     font-weight: 600;
@@ -1071,10 +1155,44 @@ body {
   .explain {
     font-weight: 500;
     font-size: 14px;
-    font-weight: 18px;
+    line-height: 18px;
     color: #fbfbfb;
     margin-bottom: 20px;
   }
+
+  .discount-info{
+    padding: 80px 10px 80px 10px;
+    gap: 10px;
+  }
+
+  .section-second-first-part{
+    gap: 10px;
+  }
+
+  .section-second-second-part{
+    padding: 80px 0 80px 0 ;
+    height: auto;
+  }
+
+  .harvest-container{
+    padding: 80px 20px 80px 20px;
+  }
+
+  .footer{
+    padding: 40px 20px 40px 20px;
+    gap: 40px;
+  }
+
+  .contact{
+    gap: 14px;
+  }
+
+  .contact-info{
+    margin-top: 40px;
+    gap: 14px;
+  }
+
+
 }
 
 @media (min-width: 768px) {
@@ -1107,7 +1225,9 @@ body {
 
   .navbar {
     display: flex;
+    width: 100%;
     gap: 470px;
+    justify-content: space-between;
   }
 
   .navbar-ul {
@@ -1210,10 +1330,14 @@ body {
   }
 
   .first-div {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    gap: 20px;
-    margin: 0 auto;
+    gap: 25px;
+    margin-left: 32px;
   }
+
+  
 
   .title {
     font-weight: 600;
@@ -1239,6 +1363,32 @@ body {
     width: 100%;
   }
 
+
+  .section-second-first-part{
+    padding: 100px 64px 100px 64px;
+
+  }
+
+
+
+  .discount-info-internal{
+    margin: 0 auto;
+  }
+
+  .discount-info-text{
+    width: 704px;
+    font-size: 64px;
+    line-height: 70px;
+    margin: 0;
+    
+  }
+
+  .discount-info-green-box{
+    width: 704px;
+    height: 70px;
+  
+  }
+
   .organic-vegatables {
     padding: 100px 32px 100px 32px;
     gap: 50px;
@@ -1248,14 +1398,16 @@ body {
   .main-text {
     font-size: 64px;
     line-height: 64px;
-    margin: 0 10%;
+    margin: 0 auto;
   }
 
   .info-text {
     width: 626px;
     font-size: 16px;
     line-height: 20px;
-    margin: 5% 10%;
+    gap: 25px;
+    margin: 50px auto;
+  
   }
 
   .products-list {
@@ -1317,21 +1469,21 @@ body {
   }
 
   .boxes-container {
-    margin: 5% 10%;
+    margin: 5% 15%;
   }
 
   .main-title {
     width: 640px;
     font-size: 64px;
     line-height: 64px;
-    margin: 5% 10%;
+    margin: 0 auto;
   }
 
   .description {
     width: 640px;
     font-size: 16px;
     line-height: 20px;
-    margin: 5% 10%;
+    margin: 0 auto;
   }
 
   .form-container {
@@ -1447,14 +1599,16 @@ body {
     width: 704px;
     font-size: 64px;
     line-height: 70px;
-    margin: 5% 10%;
+    padding: 100px 16px 100px 16px;
+    box-sizing: border-box;
+
   }
 
   .section-second-second-part-header {
     width: 450px;
     font-size: 32px;
     line-height: 32px;
-    margin: 0 10%;
+    margin: 0 auto;
   }
 
   .up-to {
@@ -1476,11 +1630,20 @@ body {
 
   .background-wrapper {
     margin: 0 auto;
+
   }
 
   .section-second-second-part {
-    height: 699px;
     margin: 0 auto;
+    padding: 100px 159px 100px 159px;
+    height: 900px;
+    gap: 10px;
+  }
+
+  .section-second-second-part-header h1{
+    width: 450px;
+    font-size: 32px;
+    line-height: 32px;
   }
 
   .section-second-first-part {
@@ -1503,7 +1666,7 @@ body {
     width: 450px;
     font-size: 16px;
     line-height: 20px;
-    margin: 0 10%;
+    margin: 0 auto;
   }
 
   .section-second-second-part-steps {
@@ -1546,7 +1709,8 @@ body {
 
 @media (min-width: 1280px) {
   .container {
-    width: 1280px;
+    all: unset;
+    width: 100px;
     margin: 0 auto;
     padding: 0 auto;
   }
@@ -1555,7 +1719,7 @@ body {
   .header-container {
     all: unset;
     background-color: #576f35;
-    width: 1280px;
+    width: 100%;
     height: 80px;
     top: 32px;
     padding: 0px 100px 0px 100px;
@@ -1567,11 +1731,10 @@ body {
     all: unset;
     display: flex;
     flex-direction: row;
-    width: 489px;
     height: 52px;
     gap: 20px;
     list-style-type: none;
-    margin-right:-100px ;
+    
   }
   
   .navcontainer {
@@ -1618,6 +1781,7 @@ body {
     border-radius: 12px 12px 12px 12px;
     border: 1px solid #fbfbfb66;
     opacity: 0px;
+    gap: 10px;
   }
   
   .logo-svg {
@@ -1625,7 +1789,7 @@ body {
     width: 194px;
     height: 18px;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 100px;
     display: flex;
   }
   
@@ -1646,6 +1810,10 @@ body {
     line-height: 20px;
     letter-spacing: -1.5%;
   }
+
+  .navbar-ul:hover a{
+    background-color: rgba(122, 49, 69, 0);
+  }
   
 
   .navbar-ul a{
@@ -1655,21 +1823,18 @@ body {
 
   .but-shop:hover {
     all: unset;
+    box-sizing: border-box;
     background: #622133;
+    width: 157px;
+    height: 52px;
+    padding:16px 32px 16px 32px;
+    border-radius: 30px;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 20px;
   }
   
-  .first-div {
-    all: unset;
-    display: flex;
-    flex-direction: column;
-    gap: 128px;
-    font-family: "Inter Tight", sans-serif;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-bottom: 50px;
-    padding-top: 238px;
-    background: none;
-  }
+
 
   .first-section{
     all: unset;
@@ -1699,8 +1864,19 @@ body {
     margin: 0;
   }
 
+  .sec4{
+    width: 1280px;
+    margin: 0 auto;
+    padding: 100px;
+  }
+
   .navbar{
-    gap: 230px;
+    all: unset;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+
   }
 
   .first-part-img1{
@@ -1729,11 +1905,12 @@ body {
   
   .background-wrapper {
     background: url("../images/hero1.jpg") right no-repeat;
-    background-size: 650px 100%;
+    background-size: 50% 100%;
     background-color: #576f35;
     padding-top: 32px;
     position: relative;
     height: 800px;
+    width: 100%;
   }
 
   
@@ -1742,14 +1919,48 @@ body {
   .first-div {
     all: unset;
     background: none;
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+
+  .first-div {
+    all: unset;
+    display: flex;
+    flex-direction: column;
+    gap: 128px;
+    padding-left: 100px;
+    background: none;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    height: 800px;
   }
   
 
   .discount-info-text{
-    width: 1080px;
+    all: unset;
+    width: 1054px;
     font-size: 76px;
     line-height: 80px;
-    gap: 25px;
+    color: #fbfbfb;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+  }
+
+  .discount-info-text span{
+    font-size: 76px;
+    line-height: 80px;
+  }
+
+  .discount-info-internal{
+    all: unset;
+    margin: 0 auto;
+    padding: 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .discount-info-green-box{
@@ -1760,6 +1971,7 @@ body {
   .organic-vegatables {
     padding: 100px;
     gap: 50px;
+    width: 100%;
   }
 
   .info {
@@ -1845,18 +2057,18 @@ body {
     position: relative;
   }
   .discount-info {
-    width: 1054px;
-    height: 240px;
-    font-weight: 600;
-    font-size: 76px;
-    line-height: 80px;
-    letter-spacing: -1.5%;
-    margin-left: 113px;
+    all: unset;
+    width: 100%;
+    height: 440px;
+    display: flex;
+    margin-bottom: 100px;
   }
-  .up-to {
+  .discount-info-green-box {
     background-color: #576f35;
     border-radius: 12px;
     color: #fbfbfb;
+    padding-left: 16px;
+    height: 80px;
   }
 
   .footer {
@@ -1873,11 +2085,16 @@ body {
     height: 759px;
     display: flex;
     flex-direction: row;
+    margin-bottom: 100px;
+    width: 100%;
   }
 
-  .section-second-first-part {
-    width: 630px;
+  .section-second > .section-second-first-part {
+    all: unset;
+    width: 50%;
     height: 759px;
+    padding: 100px;
+    background-color: #7a3145;
   }
 
   .section-second-first-part-img {
@@ -1891,10 +2108,15 @@ body {
     margin-bottom: 60px;
   }
 
-  .section-second-second-part {
-    width: 650px;
+  .section-second > .section-second-second-part {
+   all: unset;
+    width: 50%;
     height: 759px;
     gap: 10px;
+    margin: 0;
+    background-color: #576F35;
+    padding: 100px;
+  
   }
 
   .section-second-second-part-header {
